--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/pounat/friendfinder/issues"
   },
-  "homepage": "https://github.com/pounat/friendfinder#readme"
+  "homepage": "https://github.com/pounat/friendfinder#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  }
 }
